# binary_mod

./: README.md  pyproject.toml
binarymod/: ida_infineon_helper.py  ida_python_scripts.py
ecu_example/: .gitignore  SimpleEcu_1.2.elf  SimpleEcu_1.3.elf  ecu_mod_recipe.py
ecu_example/Mod_Code/: .gitignore  CMakeCache.txt  CMakeLists.txt
ecu_example/Mod_Code/src/: disasembly_vars.h  disasembly_vars.h_in  map_definitions.h  mod_code.c
ecu_example/Mod_Code/tricore/: tc21x_bsp_example.ld  tc21x_memory.ld  tc_mod_code.ld
ecu_example/SimpleECU/: CMakeLists.txt
ecu_example/SimpleECU/characteristicshandler/: get_curve_value.c  get_curve_value.h  get_map_value.c  get_map_value.h
ecu_example/SimpleECU/src/: fuelandspark.c  fuelandspark.h  main.c  version_config.h.in
ecu_example/SimpleECU/tricore/: tc21x_bsp_example.ld  tc21x_memory.ld  tc21x_simple_ecu.ld
ida_python_scripts/: ida_elftools_patchhelper.py  ida_find_function_calls.py  ida_infineon_helper.py  ida_relabel.py
